k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 3rax
  labels:
    name: 3rax
    app: inventory-system
